[project]
name = "python-cors-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "httpx[http2,socks]>=0.28.1",
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "uvicorn[standard]>=0.38.0",
]
